# simple-wb-parsing

./: .gitignore  README.md  pyproject.toml
simple-wb-parsing/: run.py
simple-wb-parsing/src/: config.py  runner.py  tools.py
simple-wb-parsing/src/db/: models.py  provider.py
simple-wb-parsing/src/parsers/: category.py  price.py  price_history.py  sale_q.py
