[tool.poetry]
name = "simple-wb-parsing"
version = "0.1.0"
description = ""
authors = ["Artem <artctvcode@gmail.com>"]
readme = "README.md"
packages = [{include = "simple_wb_parsing"}]

[tool.poetry.dependencies]
python = "3.9.15"
httpx = "^0.23.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.7"}
aiosqlite = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
